# file-converter

./: Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  validators.py
converters/: __init__.py  base.py  factory.py  txt.py  utf8.py
