[tool.poetry]
name = "file-converter"
version = "0.1.0"
description = ""
authors = ["Seweryn Piórkowski <git@piorkowski.email>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.4"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
