[tool.poetry]
name = "file-converter"
version = "0.1.0"
description = ""
authors = ["Seweryn Piórkowski <git@piorkowski.email>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.4"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = ["var-annotated"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",
    "ANN003",

    "B008",

    "C416",

    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "D203",
    "D211",
    "D213",

    "D401",

    "EM101",
    "EM102",

    "FA102",

    "FAST002",

    "FBT001",
    "FBT002",

    "FIX002",

    "N805",

    "PLR0913",

    "PT006",
    "PT007",

    "RUF012",

    "S104",

    "T100",

    "TD002",
    "TD003",

    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
filterwarnings = [
    'ignore:pkg_resources is deprecated as an API:DeprecationWarning',
]
addopts = "-vvl"

[tool.ruff.lint.isort]
known-first-party = ["converters", "main"]
